crates/monosecret/tests/snapshots/cli_command_arms__get_command_retrieves_secret_from_provider.snap
---
source: crates/monosecret/tests/cli_command_arms.rs
info:
  program: monosecret
  args:
    - "-f"
    - monosecret.toml
    - "--reason"
    - test
    - get
    - API_KEY
    - "--provider"
    - local
  env:
    HOME: /tmp/monosecret-cli-arms-get
---
success: true
exit_code: 0
----- stdout -----
retrieved-value
----- stderr -----
